--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -30,6 +30,30 @@ body {
   border-right: 10px solid #993333;*/
 }
 
+/* @group Temp To be Deleted */
+
+#933 Red {
+  font-size: 4em;
+  color: #933;
+}
+
+#285993 Blue {
+  font-size: 4em;
+  color: #285993;
+}
+
+#b2c9d8 Light Blue {
+  font-size: 4em;
+  color: #b2c9d8;
+}
+
+#f4eed7 Yellow {
+  font-size: 4em;
+  color: #f4eed7;
+}
+
+/* @end */
+
 #main {
   padding: 2em 0;
   overflow: auto;
@@ -444,15 +468,61 @@ h1.logo a:hover, h1.logo a:active {
 
 .block-crumbs {
   font-size: .75em;
-  border-top: 1px solid #b2c9d8;
-  border-bottom: 1px solid #b2c9d8;
+/*  border-top: 1px solid #b2c9d8;
+  border-bottom: 1px solid #b2c9d8;*/
   padding: .25em 0;
   margin: 1em 0;
+  overflow: auto;
+}
+
+.block-crumbs a, .block-crumbs a:after {
+  border: 1px solid #b2c9d8;
+  background-color: #e1edf4;
+  text-decoration: none;
+  transition: all .1s linear;
+}
+
+.block-crumbs a:hover, .block-crumbs a:hover:after{
+  background-color: #f4eed7;
+  color: #9d8e54;
+}
+
+.block-crumbs a {
+  border-right: 0;
+  margin: 0 2em 0 0;
+  padding: .25em 0.5em .25em 1em;
+  float: left;
+  position: relative;
+  border-radius: .4em 0 0 .4em; 
+}
+
+.block-crumbs ol > li:last-child {
+  border-radius: .4em;
+  padding: .25em 1em;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  float: left;
+}
+
+.block-crumbs a:after {
+  content: "";
+  height: 1.9em;
+  margin-top: -1em;
+  position: absolute;
+  right: -1em;
+  top: 50%;
+  width: 1.9em;
+  z-index: -1;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg); 
+  transform: rotate(45deg);
+  border-radius: .45em .25em .45em .45em;
 }
 
 /* @end */
-
-.views-exposed-form {
+.views-exposed-form, .attribute-widgets {
   font-size: .75em;
   line-height: 1.5em;
 }
@@ -466,7 +536,7 @@ h1.logo a:hover, h1.logo a:active {
   padding: 0;
 }
 
-.views-exposed-widgets {
+.views-exposed-widgets, .attribute-widgets {
   display: table;
   border: 1px solid #b2c9d8;
   border-radius: .5em;
@@ -492,8 +562,27 @@ h1.logo a:hover, h1.logo a:active {
   border-bottom: 1px solid #b2c9d8;
 }
 
-.views-exposed-widget > label {
-  font-weight: normal;
+#edit-submit {
+  display: none;
+}
+
+.attribute-widgets .form-item {
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid #b2c9d8;
+}
+
+.attribute-widgets .form-item:last-child {
+  border-bottom: 0;
+}
+
+.attribute-widgets select {
+  padding-left: 1em;
+  border-left: 0 !important;
+}
+
+.views-exposed-widget > label, .attribute-widgets label {
+  font-weight: normal !important;
 /*  text-decoration: underline;*/
   background-color: #eee;
   padding: .5em 1em;
@@ -519,14 +608,17 @@ h1.logo a:hover, h1.logo a:active {
   border: 0;
   width: 100%;
   height: 100%;
+  color: inherit;
 }
 
 .views-submit-button {
+  color: #285993 !important;
   background-color: #e1edf4 !important;
   transition: all .1s linear;
 }
 
 .views-submit-button:hover {
+  color: #9d8e54 !important;
   background-color: #f4eed7 !important;
 }
 
@@ -590,10 +682,12 @@ h2.stickyHeaders {
   padding: .2em 1em;
   font-size: .8em;
   border-radius: .5em;
+/*  background-color: #e1edf4;*/
 }
 
 .productItem .itemNav a:hover {
-  background-color: #e1edf4;
+  background-color: #f4eed7;
+  color: #9d8e54;
 }
 
 .view-content {
@@ -1070,7 +1164,7 @@ ul#contactInfo li:before {
   white-space: nowrap;
 }
 
-.webform-client-form input[type=text], .webform-client-form input[type=email], .webform-client-form textarea, .webform-client-form select   {
+.webform-client-form input[type=text], .webform-client-form input[type=email], .webform-client-form textarea, select   {
   font: normal 1em/1.5em "Monaco", "lucida console", "courier", monospace;
   background-color: transparent;
   width: 101%;
@@ -1083,7 +1177,7 @@ ul#contactInfo li:before {
   border-left: 1px solid #b2c9d8;
 }
 
-.webform-client-form select {
+select {
   cursor: pointer;
   border-radius: 0;
   background: #fff;
@@ -1126,10 +1220,12 @@ ul#contactInfo li:before {
   border-top: 1px solid #b2c9d8;
   border-right: 1px solid #b2c9d8;
   transition: all .1s linear;
+  color: #285993;
 }
 
-.webform-client-form .form-actions input[type=submit]:hover, .webform-client-form select:hover {
+.webform-client-form .form-actions input[type=submit]:hover, select:hover {
   background-color: #f4eed7;
+  color: #9d8e54;
 } 
 
 .messages {
