--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -596,11 +596,11 @@ h1.logo a:hover, h1.logo a:active {
 }
 
 .selectYes {
-  color: #0b0;
+  color: #000;
 }
 
 .selectNo {
-  color: #933;
+  color: #ccc;
 }
 
 .views-exposed-widget > label, .attribute-widgets label {
@@ -613,6 +613,13 @@ h1.logo a:hover, h1.logo a:active {
 
 .views-exposed-widget > div {
   padding: .5em 1em 1em 1em;
+}
+
+.views-exposed-widget > div select {
+  border: 0;
+  padding: 0 1em !important;
+  box-sizing: content-box;
+  margin: -.5em -1em 0 -1em;
 }
 
 .views-exposed-widget:nth-child(4n+4) {
@@ -880,7 +887,7 @@ h2.stickyHeaders {
 }
 
 .profileTile h2 {
-  margin: 0;
+  margin: 0 !important;
   font-size: 1.2em !important;
 }
 
@@ -902,11 +909,17 @@ h1.title {
   line-height: 1em;
 }
 
-.commerce-product-sku {
+.group_product_name {
   border-top: 1px solid #b2c9d8;
   border-bottom: 1px solid #b2c9d8;
   padding: .5em 0;
+  margin-bottom: 2em;
   font-size: .75em;
+}
+
+.group_product_name * {
+  float: none !important;
+  display: inline !important;
 }
 
 /*.horizontal-tabs {
@@ -965,7 +978,7 @@ ul.horizontal-tabs-list {
   margin-left: 2em;
 }
 
-.field-group-format-wrapper .field-label {
+.field-group-format .field-label {
   display: inline-block;
   width: 30%;
   margin-right: 5%;
@@ -977,7 +990,7 @@ ul.horizontal-tabs-list {
   margin: 1em 0 .5em 0;
 }
 
-.field-group-format-wrapper .field-label + .field-items {
+.field-group-format .field-label + .field-items {
   display: inline-block;
   width: 65%;
 }
@@ -991,14 +1004,33 @@ ul.horizontal-tabs-list {
   padding: .5em;
 }
 
-.field-group-format-wrapper .field-label + .field-items > .field-item {
+.field-group-format .field-label + .field-items > .field-item {
   display: inline-block;
   min-width: 6em;
   margin-right: 1em;
 }
 
-.field-group-format-wrapper .commerce-product-field:nth-child(even) {
+.group_product_specs .commerce-product-field:nth-child(odd) {
   background-color: #eee;
+}
+
+.field-name-field-finishes > div > .field-item {
+  width: 6.5em;
+}
+
+.field-name-field-finishes h2 {
+  font: normal 1em/1.5em "Monaco", "lucida console", "courier", monospace !important;
+  display: inline !important;
+}
+
+.field-name-field-finishes .content {
+  float: left;
+  width: 3em;
+  height: 2.5em;
+}
+
+.field-name-field-finishes img {
+  border: 1px solid #999;
 }
 
 .field-type-image {
@@ -1010,10 +1042,6 @@ ul.horizontal-tabs-list {
 .field-type-image img {
 	width: auto;
 	}
-/*.field-name-field-products {
-	width: 30%;
-	margin-left: 65%;
-	}*/
 .field-group-htabs-wrapper {
 	clear: both;
 	width: 100%;
@@ -1034,7 +1062,7 @@ div.innerPageNav {
 }
 
 div.innerPageNav div.innerNavItem {
-  margin: .25em;
+  margin: .25em .25em 1em .25em;
   display: inline-block;
 }
 
@@ -1084,14 +1112,15 @@ div.innerPageNav div.innerNavItem a:hover {
   font: 16px/1.8em "Georgia", "Times New Roman", Times , Serif;
 }
 
-.contentBand ul {
+.contentBand ul li {
   list-style-type: none;
-  padding-left: 2em;
+  padding-left: 1.5em;
 }
 
 .contentBand ul li:before {
   content: '\00d7 ';
   color: #933;
+  margin-left: -1.5em;
   padding-right: .5em;
   font-weight: bold;
 }
