--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -447,13 +447,16 @@ h1.logo a:hover, h1.logo a:active {
 /* @group Root Product Menu */
 
 .gridItem {
-  width: 50%;
+  width: 48%;
   float: left;
   text-align: center;
+  margin: 1%;
 }
 
 .gridItem .productTypeItems {
   border: 0;
+  border: 1px solid #933;
+  border-radius: .5em;;
 }
 
 .gridItem .productTypeItems img {
@@ -894,6 +897,25 @@ h2.stickyHeaders {
   vertical-align: top;
 }
 
+.gridTile > img {
+	width: 150px;
+	height: auto;
+}
+
+.gridTile {
+  font-size: .9em;
+  min-height: 16em;
+  display: inline-block;
+  text-align: center;
+  width: 25%;
+  margin: 1.5em 0;
+  vertical-align: top;
+}
+
+.gridTile ul li {
+  list-style-type: none;
+}
+
 .profileTile h2 {
   margin: 0 !important;
   font-size: 1.2em !important;
@@ -1204,6 +1226,11 @@ div.innerPageNav:after, .contentBand:not(:last-child):after {
 	border-bottom: 1px solid #b2c9d8;
 	display: block;
 	margin: 3em auto;
+}
+div.gridItem:after {
+	margin: 0 !important;
+	border-bottom: 0 !important;
+
 }
 
 
