--- a/sites/all/themes/alhx/css/flexslider.css
+++ b/sites/all/themes/alhx/css/flexslider.css
@@ -57,8 +57,9 @@ html[xmlns] .slides {display: block;}
 .flexslider .caption {
   text-align: center;
   position: absolute;
-  top: 60%;
-  width: 100%;
+  top: 40%;
+  width: 50%;
+  left: 25%;
   color: #fff !important;
 }
 .flexslider .caption h1 {
