--- a/sites/all/themes/alhx/css/singleCol.css
+++ b/sites/all/themes/alhx/css/singleCol.css
@@ -43,6 +43,14 @@ footer {
   margin: 0 2em 0 202px !important;
 }
 
+.fullMenu {
+  display: none !important;
+}
+
+.inlineMenu {
+  display: block;
+}
+
 
 
 /*.overlay {
